<resources>
    <string name="app_name">MyParcel Traking</string>
    <string name="title_parcel_shipped">My parcels</string>
    <string name="title_history">History</string>
    <string name="title_notifications">Notifications</string>

    <string name="no_parcel_yet">No items yet. Add one</string>
    <string name="no_parcel_history_yet">No items yet.</string>

    <string name="date_format">dd-MM-yyyy</string>
    <string name="time_spent_seconds">right now</string>
    <string name="time_spent_minutes">%1$s minutes ago</string>
    <string name="time_spent_days">%1$s days ago</string>
    <string name="time_spent_hours">%1$s hours ago</string>

    <string name="permission_dialog_message">Storage permission required</string>
    <string name="permission_dialog_title">Permissions required</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading_dialog_text">Loading</string>
    <string name="add">Add</string>
    <string name="barcode_scan">Scan Code</string>
    <string name="tracking_number_barcode_scan">Scan tracking number barcode</string>
    <string name="tracking_name">Name</string>
    <string name="tracking_number">Tracking Number</string>
    <string name="notes">Notes</string>
    <string name="parcel_added_event">Parcel %1$s added</string>
    <string name="parcel_added_event_details">Parcel %1$s was added on %2$s</string>
    <string name="parcel_updated_event">Parcel %1$s updated</string>
    <string name="parcel_updated_to_archive_event_details">Parcel %1$s was archived on %2$s</string>
    <string name="parcel_updated_to_unarchive_event_details">Parcel %1$s was unarchived on %2$s</string>
    <string name="parcel_data_updated_event_details">Parcel data was updated on %1$s</string>
    <string name="notification_title">Parcel %1$s has new updates</string>
    <string name="notification_details">Parcel %1$s status changed from %2$s to %3$s</string>
    <string name="added">Added:</string>
    <string name="updated">Updated:</string>
    <string name="title_parcel_details">Details</string>
    <string name="no_events_yet">No events yet</string>
    <string name="title_settings">Settings</string>
    <string name="update">Update</string>
    <string name="title_user">Me</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Create Box</string>
    <string name="content_status_image_description">Status image</string>

    <string name="delete_dialog_title">Delete item</string>
    <string name="delete_dialog_body">Are you sure?</string>
    <string name="delete_dialog_yes">Yes</string>
    <string name="delete_dialog_no">No</string>

</resources>