<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.kronos.parcel.tracking.ui.parcel_details.ParcelDetailsViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.parcel_details.ParcelDetailsFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline05"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline95"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.95" />

                <ImageView
                    android:id="@+id/imageStatus"
                    android:layout_width="@dimen/size_40"
                    android:layout_height="@dimen/size_40"
                    android:layout_margin="@dimen/margin_5"
                    app:layout_constraintEnd_toEndOf="@id/guideline95"
                    app:layout_constraintStart_toStartOf="@id/guideline05"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewParcelTrackingNumber"
                    style="@style/TextViewNormal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.parcel.trackingNumber}"
                    app:layout_constraintEnd_toEndOf="@id/guideline95"
                    app:layout_constraintStart_toStartOf="@id/guideline05"
                    app:layout_constraintTop_toBottomOf="@+id/imageStatus" />

                <TextView
                    android:id="@+id/textViewParcelName"
                    style="@style/TextViewNormal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.parcel.name}"
                    app:layout_constraintEnd_toEndOf="@id/guideline95"
                    app:layout_constraintStart_toStartOf="@id/guideline05"
                    app:layout_constraintTop_toBottomOf="@+id/textViewParcelTrackingNumber" />

                <TextView
                    android:id="@+id/textViewParcelStatus"
                    style="@style/TextViewNormal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.parcel.status}"
                    app:layout_constraintEnd_toEndOf="@id/guideline95"
                    app:layout_constraintStart_toStartOf="@id/guideline05"
                    app:layout_constraintTop_toBottomOf="@+id/textViewParcelName" />


                <TextView
                    android:id="@+id/textView"
                    style="@style/TextViewSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/added"
                    app:layout_constraintStart_toStartOf="@id/guideline05"
                    app:layout_constraintTop_toBottomOf="@id/textViewParcelStatus" />

                <TextView
                    android:id="@+id/textViewParcelTime"
                    style="@style/TextViewSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/guideline5"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@id/textViewParcelStatus"
                    app:time_transit_spent="@{viewModel.parcel.dateAdded}" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/TextViewSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/updated"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toBottomOf="@id/textViewParcelStatus" />

                <TextView
                    android:id="@+id/textViewParcelUpdated"
                    style="@style/TextViewSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@id/guideline95"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@id/textViewParcelStatus"
                    app:time_transit_spent="@{viewModel.parcel.dateUpdated}" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrierParcelData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="textViewParcelTime,textViewParcelUpdated,textView,textView2"/>

                <TextView
                    android:id="@+id/text_no_events"
                    style="@style/TextViewNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/no_events_yet"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_20"
                    app:handle_visibility="@{viewModel.eventList.size()==0}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barrierParcelData" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewCurrentParcelEvents"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/margin_10"
                    app:handle_visibility="@{viewModel.eventList.size()>0}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/barrierParcelData"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_event" />



            </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>
